--- a/book/python/02_variables.ipynb
+++ b/book/python/02_variables.ipynb
@@ -38,12 +38,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "2",
    "metadata": {},
    "outputs": [],
    "source": [
     "num_points = 120"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "df40723c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "120"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "num_points"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "fdce08b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "int"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "type(num_points)"
    ]
   },
   {
@@ -63,7 +105,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(num_points)"
+    "print(num_points) #if python script you need print function"
    ]
   },
   {
@@ -81,7 +123,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_points"
+    "num_points #in jupyter notebook you do not need print function"
    ]
   },
   {
@@ -93,7 +135,7 @@
     "\n",
     "When naming variables, you should follow these rules:\n",
     "\n",
-    "- Variable names must start with a letter or an underscore, such as `_`.\n",
+    "- Variable names must start with a letter or an underscore, such as `_`. No - do not use captial letter\n",
     "- The remainder of the variable name can consist of letters, numbers, and underscores.\n",
     "- Variable names are case-sensitive, so `num_points` and `Num_Points` are different variables.\n",
     "- Variable names should be descriptive and meaningful, such as `num_points` instead of `n`.\n",
@@ -156,7 +198,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "coordinate_system = \"WGS 84\"  # Represents a commonly used coordinate system"
+    "coordinate_system = \"WGS 84\"  # Represents a commonly used coordinate system, one = sign is assign but two == is to compare"
    ]
   },
   {
@@ -182,7 +224,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "is_georeferenced = True  # Represents whether a dataset is georeferenced or not"
+    "is_georeferenced = True  # Represents whether a dataset is georeferenced or not, the True has to be uppercase"
    ]
   },
   {
@@ -203,7 +245,11 @@
     "coordinates = [\n",
     "    35.6895,\n",
     "    139.6917,\n",
-    "]  # A list representing latitude and longitude of a point"
+    "]  # A list representing latitude and longitude of a point, always going to be less than actual number in list bc it starts at 0 so this is (0-1)\n",
+    "#coordinates.append() to add another number\n",
+    "#coordinates.pop() to take out variable \n",
+    "#coordinates.insert(1, 100) to add zero as the first variable \n",
+    "#nested_list[][][] to get to the number you want in a nested list"
    ]
   },
   {
@@ -226,7 +272,8 @@
     "    \"height_meters\": 3776,\n",
     "    \"type\": \"Stratovolcano\",\n",
     "    \"location\": [35.3606, 138.7274],\n",
-    "}"
+    "}\n",
+    "#to get the long you say feature_attributes['location'][1]"
    ]
   },
   {
@@ -246,7 +293,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"Hello World!\\nThis is a Python script.\")"
+    "print(\"Hello World!\\nThis is a Python script.\")\n",
+    "#\\n means enter/next line \\t means tab\n",
+    "#r means raw so sometimes if you need a filepath you need to out r first (especially for windows)"
    ]
   },
   {
@@ -497,7 +546,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "geo",
    "language": "python",
    "name": "python3"
   },
@@ -511,7 +560,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
