--- a/book/python/03_data_structures.ipynb
+++ b/book/python/03_data_structures.ipynb
@@ -96,6 +96,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "85892ff7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "path[1]= 90 #you can change the number but not change just one of the numbers so you could not change -0.12\n",
+    "path.append() #to add to the list"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "7",
    "metadata": {},
@@ -153,7 +164,9 @@
    "outputs": [],
    "source": [
     "regions = [\"North America\", \"Europe\", \"Asia\"]  # Set of regions\n",
-    "regions = set(regions)"
+    "regions = set(regions)\n",
+    "# need to put ([]) it is a set but () is a tuple\n",
+    "#number goes first, then upper case, then lower case then spatial character at beginning or last"
    ]
   },
   {
@@ -172,7 +185,8 @@
    "outputs": [],
    "source": [
     "regions.add(\"Africa\")\n",
-    "print(\"Updated regions:\", regions)"
+    "print(\"Updated regions:\", regions)\n",
+    "regions.add() #to add"
    ]
   },
   {
@@ -217,7 +231,11 @@
     "    \"name\": \"Tokyo\",\n",
     "    \"population\": 13929286,\n",
     "    \"coordinates\": (35.6895, 139.6917),\n",
-    "}  # Dictionary storing attributes of a city"
+    "}  # Dictionary storing attributes of a city\n",
+    "#to access the info you can use city.attributes[\"name\"]\n",
+    "#also use city.attributes.get(\"name2\") to see if something is in the attributes even if it is not\n",
+    "#can add updates by city.attributes[\"population\"]= 1349\n",
+    "#to add city.attributes[\"counties\"]= [\"Nakano\", \"Shibuya\"]"
    ]
   },
   {
