--- a/book/python/04_string_operations.ipynb
+++ b/book/python/04_string_operations.ipynb
@@ -41,7 +41,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "location_name = \"Mount Everest\"  # A string representing the name of a location"
+    "location_name = \"Mount Everest\"  # A string representing the name of a location\n",
+    "#to get E from the list you do location_name[6] or location_name[6: ] or location_name[0:5] or [:5]"
    ]
   },
   {
@@ -60,7 +61,8 @@
    "outputs": [],
    "source": [
     "location_name_full = location_name + \", Nepal\"\n",
-    "print(location_name_full)"
+    "print(location_name_full)\n",
+    "#f string allows you to format the string so f\"{lastname}, {firstname}\""
    ]
   },
   {
@@ -79,7 +81,9 @@
    "outputs": [],
    "source": [
     "separator = \"-\" * 10\n",
-    "print(separator)"
+    "print(separator)\n",
+    "#* means multiply so above would be 10 - \n",
+    "# str(f\"{fullname} ; \" * 10)[:-2] to add space and semicolons "
    ]
   },
   {
@@ -164,12 +168,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ce6cee06",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = \"Mount Mount Everest\"\n",
+    "name.replace(\"Mount\", \"Mountain\", 1) #to replace the first one but if you put -1 it will replace all "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "14",
    "metadata": {},
    "outputs": [],
    "source": [
-    "location_parts = location_name_full.split(\", \")\n",
-    "print(location_parts)  # Split the string into a list"
+    "location_parts = location_name_full.split(\", \")#if you take out the space after the comma then it will write like ' Nepal'\n",
+    "print(location_parts)  # Split the string into a list\n",
+    "# [item.strip() for item in location.split(\",\")] to strip all the spaces"
    ]
   },
   {
