--- a/book/python/05_looping.ipynb
+++ b/book/python/05_looping.ipynb
@@ -42,7 +42,9 @@
     "]  # List of tuples representing coordinates\n",
     "\n",
     "for lat, lon in coordinates:\n",
-    "    print(f\"Latitude: {lat}, Longitude: {lon}\")"
+    "    print(f\"Latitude: {lat}, Longitude: {lon}\")\n",
+    "    \n",
+    "    [lat for lat, lon in coordinates] #loop through the items"
    ]
   },
   {
@@ -61,7 +63,7 @@
    "outputs": [],
    "source": [
     "def calculate_distance(lat1, lon1, lat2, lon2):\n",
-    "    # Placeholder for distance calculation logic\n",
+    "    # Placeholder for distance calculation logic, for function name use lowercase\n",
     "    return ((lat2 - lat1) ** 2 + (lon2 - lon1) ** 2) ** 0.5\n",
     "\n",
     "\n",
