--- a/book/python/03_data_structures.ipynb
+++ b/book/python/03_data_structures.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "6",
    "metadata": {},
    "outputs": [],
@@ -105,10 +105,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "8",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Updated path: [(35.6895, 139.6917), (34.0522, -118.2437), (51.5074, -0.1278), (48.8566, 2.3522)]\n"
+     ]
+    }
+   ],
    "source": [
     "path.append((48.8566, 2.3522))  # Adding Paris to the path\n",
     "print(\"Updated path:\", path)"
@@ -124,10 +132,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "10",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sub-path: [(35.6895, 139.6917), (34.0522, -118.2437)]\n"
+     ]
+    }
+   ],
    "source": [
     "sub_path = path[:2]  # Slicing the first two points from the path\n",
     "print(\"Sub-path:\", sub_path)"
@@ -208,10 +224,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "18",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'name': 'Tokyo', 'population': 13929286, 'coordinates': (35.6895, 139.6917)}"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "city_attributes = {\n",
     "    \"name\": \"Tokyo\",\n",
@@ -292,7 +319,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "geo",
    "language": "python",
    "name": "python3"
   },
@@ -306,7 +333,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
