--- a/book/python/06_functions_classes.ipynb
+++ b/book/python/06_functions_classes.ipynb
@@ -76,6 +76,7 @@
     "def greet(name, greeting=\"Hello\"):\n",
     "    return f\"{greeting}, {name}!\"\n",
     "\n",
+    "#can not have a optional before requirement \n",
     "\n",
     "# Example usage\n",
     "print(greet(\"Alice\"))  # Uses the default greeting\n",
@@ -177,7 +178,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def haversine(lat1, lon1, lat2, lon2, radius=6371.0):\n",
+    "def haversine(lat1, lon1, lat2, lon2, radius=6371.0): #make sure to make anything that can be customised optional\n",
     "    dlat = radians(lat2 - lat1)\n",
     "    dlon = radians(lon2 - lon1)\n",
     "    a = (\n",
@@ -310,18 +311,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#Know difference between class (kind of like a blueprint) and object\n",
     "class Point:\n",
-    "    def __init__(self, latitude, longitude, name=None):\n",
+    "    def __init__(self, latitude, longitude, name=None): #always have def __init__ (initalize) in class and indent, class defined with captial first letter of each word you put together, first parameter of class is self (class itself)\n",
     "        self.latitude = latitude\n",
     "        self.longitude = longitude\n",
     "        self.name = name\n",
-    "\n",
-    "    def __str__(self):\n",
+    "#self. are the attributes of the class, when you put something like self._num it becomes hidden\n",
+    "    def __str__(self): #when you are printing out the object what do you want\n",
     "        return f\"{self.name or 'Point'} ({self.latitude}, {self.longitude})\"\n",
     "\n",
     "\n",
     "# Example usage\n",
-    "point1 = Point(35.6895, 139.6917, \"Tokyo\")\n",
+    "point1 = Point(35.6895, 139.6917, \"Tokyo\") \n",
     "print(point1)"
    ]
   },
