--- a/book/python/07_files.ipynb
+++ b/book/python/07_files.ipynb
@@ -46,12 +46,12 @@
     "34.0522,-118.2437\n",
     "51.5074,-0.1278\n",
     "-33.8688,151.2093\n",
-    "48.8566,2.3522\"\"\"\n",
+    "48.8566,2.3522\"\"\" #triple quotes means across multiple lines\n",
     "\n",
     "output_file = \"coordinates.txt\"\n",
     "\n",
     "try:\n",
-    "    with open(output_file, \"w\") as file:\n",
+    "    with open(output_file, \"w\") as file: #does not need to be called file (it is a temporary variable)\n",
     "        file.write(sample_data)\n",
     "    print(f\"Sample file '{output_file}' has been created successfully.\")\n",
     "except Exception as e:\n",
