--- a/book/python/08_numpy_pandas.ipynb
+++ b/book/python/08_numpy_pandas.ipynb
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -157,7 +157,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Reshape a 1D array into a 2D array\n",
+    "# Reshape a 1D array into a 2D array, x axis is 0 and y axis is 1\n",
     "arr_reshaped = np.arange(12).reshape((3, 4))\n",
     "print(f\"Reshaped 1D Array into 2D Array:\\n{arr_reshaped}\")"
    ]
@@ -988,7 +988,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "geo",
    "language": "python",
    "name": "python3"
   },
@@ -1002,7 +1002,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
