--- a/book/python/06_functions_classes.ipynb
+++ b/book/python/06_functions_classes.ipynb
@@ -40,10 +40,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Result: 8\n"
+     ]
+    }
+   ],
    "source": [
     "def add(a, b):\n",
     "    return a + b\n",
@@ -68,10 +76,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello, Alice!\n",
+      "Hi, Bob!\n"
+     ]
+    }
+   ],
    "source": [
     "def greet(name, greeting=\"Hello\"):\n",
     "    return f\"{greeting}, {name}!\"\n",
@@ -96,10 +113,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Multiplication Result: 20\n"
+     ]
+    }
+   ],
    "source": [
     "# Function to multiply two numbers\n",
     "def multiply(a, b):\n",
@@ -127,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "8",
    "metadata": {},
    "outputs": [],
@@ -137,10 +162,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distance: 8815.47 km\n"
+     ]
+    }
+   ],
    "source": [
     "def haversine(lat1, lon1, lat2, lon2):\n",
     "    R = 6371.0  # Earth radius in kilometers\n",
@@ -172,10 +205,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "11",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distance in kilometers: 8815.47 km\n",
+      "Distance in miles: 5477.74 miles\n"
+     ]
+    }
+   ],
    "source": [
     "def haversine(lat1, lon1, lat2, lon2, radius=6371.0):\n",
     "    dlat = radians(lat2 - lat1)\n",
@@ -210,10 +252,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "13",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Distances: [8815.473355809401, 3935.746254609723]\n"
+     ]
+    }
+   ],
    "source": [
     "def batch_haversine(coord_list):\n",
     "    distances = []\n",
@@ -455,7 +505,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "geo",
    "language": "python",
    "name": "python3"
   },
@@ -469,7 +519,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
