--- a/book/python/07_files.ipynb
+++ b/book/python/07_files.ipynb
@@ -36,10 +36,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Sample file 'coordinates.txt' has been created successfully.\n"
+     ]
+    }
+   ],
    "source": [
     "# Create a sample coordinates.txt file\n",
     "sample_data = \"\"\"35.6895,139.6917\n",
@@ -80,10 +88,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Coordinates have been written to output_coordinates.txt\n"
+     ]
+    }
+   ],
    "source": [
     "# Example of reading coordinates from a file and writing to another file\n",
     "input_file = \"coordinates.txt\"\n",
@@ -117,19 +133,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error: not enough values to unpack (expected 2, got 1). Could not parse line: invalid data\n"
+     ]
+    }
+   ],
    "source": [
-    "# Example of exception handling when parsing coordinates\n",
+    "# Example of exception handling when parsing coordinates, put things that expect to be formatted different in try except and finally (finally is not required)\n",
+    "#only put line that might have errors in try block\n",
     "def parse_coordinates(line):\n",
     "    try:\n",
+    "        #can do if \",\" in line:\n",
     "        lat, lon = line.strip().split(\",\")\n",
+    "        #else \" \" in line:\n",
+    "        #lat, lon = line.strip().split(\",\")\n",
+    "        #more in video\n",
     "        lat = float(lat)\n",
     "        lon = float(lon)\n",
     "        return lat, lon\n",
-    "    except ValueError as e:\n",
+    "    except ValueError as e: #what kind of error you want to capture\n",
     "        print(f\"Error: {e}. Could not parse line: {line.strip()}\")\n",
     "        return None\n",
     "    except Exception as e:\n",
@@ -353,7 +382,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "geo",
    "language": "python",
    "name": "python3"
   },
@@ -367,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
