--- a/book/labs/lab_05.ipynb
+++ b/book/labs/lab_05.ipynb
@@ -1,22 +1,26 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8953a622",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/jlhammel/geog-510/blob/four/book/labs/lab_04.ipynb)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "0",
    "metadata": {},
    "source": [
-    "# Lab 5\n",
-    "\n",
+    "# Lab 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29f4ef90",
+   "metadata": {},
+   "source": [
+    "[![Open In Colab](https://colab.research.google.com/assets/colab-badge.svg)](https://colab.research.google.com/github/jlhammel/geog-510/blob/lab5/book/labs/lab_05.ipynb)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a86c3cab",
+   "metadata": {},
+   "source": [
     "## Exercise 1: Calculating Distances with Functions\n",
     "\n",
     "- Define a function `calculate_distance` that takes two geographic coordinates (latitude and longitude) and returns the distance between them using the Haversine formula.\n",
